--- a/languages/en/LC_MESSAGES/events.po
+++ b/languages/en/LC_MESSAGES/events.po
@@ -1,54 +1,50 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR ORGANIZATION
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2017-04-07 12:32+0200\n"
-"PO-Revision-Date: 2017-04-07 12:33+0200\n"
+"POT-Creation-Date: 2017-04-07 12:34+0200\n"
+"PO-Revision-Date: 2017-04-07 12:34+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: it\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: pygettext.py 1.5\n"
 "X-Generator: Poedit 2.0\n"
+"X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: Marvin/modules/events/event_command.py:64
 msgid "The usage of reminder command is: /reminder <hours> <event_name>"
-msgstr "L'utilizzo del comando è: /reminder <hours> <event_name>"
+msgstr ""
+"The usage of reminder command is: /reminder <hours> <event_name>"
 
 #: Marvin/modules/events/event_command.py:70
 msgid "The first argument must be an integer (hours)"
-msgstr "Il primo argomento deve essere un valore intero (ore)"
+msgstr "The first argument must be an integer (hours)"
 
 #: Marvin/modules/events/event_command.py:85
 msgid "You can't set a reminder on events created by others"
-msgstr ""
-"Non è possibile impostare un promemoria su eventi creati da altri utenti"
+msgstr "You can't set a reminder on events created by others"
 
 #: Marvin/modules/events/event_command.py:120
 msgid "Reminder removed!"
-msgstr "Rimosso il promemoria!"
+msgstr "Reminder removed!"
 
 #: Marvin/modules/events/event_command.py:139
 msgid "Bye! I hope we can talk again some day"
-msgstr "Ciao! Spero che un giorno tornerai a parlare con me"
+msgstr "Bye! I hope we can talk again some day"
 
 #: Marvin/modules/events/event_command.py:150
 msgid "You don't have the permission to create new event"
-msgstr "Non hai i permessi per creare un nuovo evento"
+msgstr "You don't have the permission to create new event"
 
 #: Marvin/modules/events/event_command.py:159
 msgid "(1/4) Insert the title of the event"
-msgstr "(1/4) Inserisci il titolo dell’evento"
+msgstr "(1/4) Insert the title of the event"
 
 #: Marvin/modules/events/event_command.py:172
 msgid "(2/4) Ok! Now set a description or /skip"
-msgstr "(2/4) Ok! Ora imposta la descrizione oppure /skip"
+msgstr "(2/4) Ok! Now set a description or /skip"
 
 #: Marvin/modules/events/event_command.py:184
 #: Marvin/modules/events/event_command.py:190
@@ -56,53 +52,50 @@ msgid ""
 "(3/4) Ok! Now set the date and the time (dd/mm/yyyy HH:mm format, eg "
 "30/10/1970 15:33)"
 msgstr ""
-"(3/4) Ok! Ora imposta la data e l’orario (nel formato gg/mm/aaaa HH:mm, ad "
-"esempio 30/10/1980 15:33)"
+"(3/4) Ok! Now set the date and the time (dd/mm/yyyy HH:mm format, eg "
+"30/10/1970 15:33)"
 
 #: Marvin/modules/events/event_command.py:198
 msgid "The date is in the past, insert correct date!"
-msgstr "La data che hai impostato è nel passato, inserisci una data corretta!"
+msgstr "The date is in the past, insert correct date!"
 
 #: Marvin/modules/events/event_command.py:207
 msgid "(4/4) Last step! Set the location or /skip"
-msgstr "(4/4) Ultimo passo, imposta una località oppure /skip"
+msgstr "(4/4) Last step! Set the location or /skip"
 
 #: Marvin/modules/events/event_command.py:219
 #: Marvin/modules/events/event_command.py:224
 msgid "Yeah!!! Event created"
-msgstr "Yeah!!! Evento creato con successo"
+msgstr "Yeah!!! Event created"
 
 #: Marvin/modules/events/event_command.py:231
 msgid "There is no draft open for user {}"
-msgstr "Non c’è nessuna bozza aperta per l’utente corrente {}"
+msgstr "There is no draft open for user {}"
 
 #: Marvin/modules/events/event_inline.py:122
 msgid "Users confirmed (<b>{total}</b>)\n"
-msgstr "Utenti confermati (<b>{total}</b>)\n"
+msgstr "Users confirmed (<b>{total}</b>)\n"
 
 #: Marvin/modules/events/event_inline.py:130
 msgid "Users not confirmed ({total})\n"
-msgstr "Utenti non confermati ({total})\n"
+msgstr "Users not confirmed ({total})\n"
 
 #: Marvin/modules/events/event_inline.py:138
 msgid "Users maybe ({total})\n"
-msgstr "Utenti in forse ({total})\n"
+msgstr "Users maybe ({total})\n"
 
 #: Marvin/modules/events/event_inline.py:151
 msgid "Join"
-msgstr "Ok"
+msgstr "Join"
 
 #: Marvin/modules/events/event_inline.py:155
 msgid "Not go"
-msgstr "Non posso"
+msgstr "Not go"
 
 #: Marvin/modules/events/event_inline.py:159
 msgid "Maybe"
-msgstr "In forse"
+msgstr "Maybe"
 
 #: Marvin/modules/events/event_model.py:47
 msgid "No user_id found in dictionary"
-msgstr "Nessun user_id trovato"
-
-#~ msgid "Create new event..."
-#~ msgstr "Crea nuovo evento"
+msgstr "No user_id found in dictionary"
